--- a/dubbo-entity/pom.xml
+++ b/dubbo-entity/pom.xml
@@ -1,10 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.zghw.dubbo.demo</groupId>
-    <artifactId>dubbo-parent</artifactId>
-    <version>0.0.1</version>
-  </parent>
-  <artifactId>dubbo-simple-entity</artifactId>
-  
+  <groupId>com.zghw.dubbo.demo</groupId>
+  <artifactId>dubbo-entity</artifactId>
+  <version>0.0.1</version>
 </project>
