--- a/dubbo-parent/dubbo-base-webapp/pom.xml
+++ b/dubbo-parent/dubbo-base-webapp/pom.xml
@@ -3,17 +3,16 @@
   <parent>
     <groupId>com.zghw.dubbo.demo</groupId>
     <artifactId>dubbo-parent</artifactId>
-	<version>0.0.1</version>
+    <version>0.0.1</version>
   </parent>
-  <artifactId>dubbo-simple-service-api</artifactId>
-  <packaging>jar</packaging>
+  <artifactId>dubbo-base-webapp</artifactId>
+  <packaging>war</packaging>
   
   <dependencies>
   	<dependency>
-  		<groupId>com.zghw.dubbo.demo</groupId>
-  		<artifactId>dubbo-entity</artifactId>
+		<groupId>com.zghw.dubbo.demo</groupId>  	
+  		<artifactId>dubbo-base-service-impl</artifactId>
   		<version>${project.version}</version>
-  	</dependency>
+  	 </dependency>
   </dependencies>
-  
 </project>
